--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p>Привет из алгоритмики!</p>
-    <p>Привет из алгоритмики!</p>
+    <h1>Hello World</h1>
 </body>
-
 </html>
